# CMake-Template

./: .clang-format  .clang-tidy  CMakeLists.txt
